  methods.



[[new-in-4.3]]
== New Features and Enhancements in Spring Framework 4.3

=== Core Container Improvements

* It is no longer necessary to specify the `@Autowired` annotation if the target
  bean only define one constructor.
* `@Configuration` classes support constructor injection.
* Any SpEL expression used to specify the `condition` of an `@EventListener` can
  now refer to beans (i.e. `@beanName.method()`).

=== Data Access Improvements

* `jdbc:initialize-database` and `jdbc:embedded-database` support a configurable
  separator to be applied to each script.

=== Caching Improvements

Spring 4.3 allows concurrent calls on a given key to be synchronized so that the
value is only computed once. This is an opt-in feature that should be enabled via
the new `sync` attribute on `@Cacheable`. This features introduces a breaking
change in the `Cache` interface as a `get(Object key, Callable<T> valueLoader)`
method has been added.

Spring 4.3 also improves the caching abstraction as follows:

* SpEL expressions in caches-related annotations can now refer to beans (i.e.
  `@beanName.method()`).
* `ConcurrentMapCacheManager` and `ConcurrentMapCache` now support the serialization
  of cache entries via a new `storeByValue` attribute.

=== JMS Improvements

* `@SendTo` can now be specified at class-level to share a common reply destination.

=== Web Improvements

* New `@RestControllerAdvice` annotation combines `@ControllerAdvice` with `@ResponseBody`.
* `@ResponseStatus` can be used on a controller type is inherited for all method.
* `AsyncRestTemplate` supports request interception.

=== WebSocket Messaging Improvements

* `@SendTo` can now be specified at class-level to share a common destination.

=== Testing Improvements

* The JUnit support in the _Spring TestContext Framework_ now requires JUnit 4.12 or higher.
* HeaderResultMatchers in Spring MVC Test supports expectations on multiple header values