@@ -672,4 +672,5 @@ Spring 4.3 also improves the caching abstraction as follows:
 === Testing Improvements
 
 * The JUnit support in the _Spring TestContext Framework_ now requires JUnit 4.12 or higher.
-* HeaderResultMatchers in Spring MVC Test supports expectations on multiple header values
+* Client-side Spring MVC Test supports expectations for form data in the request body.
+* Server-side Spring MVC Test supports expectations on response headers with multiple values.
